Fixed spacing of main intro callout

--- a/src/components/mainIntro/mainIntro.module.scss
+++ b/src/components/mainIntro/mainIntro.module.scss
@@ -64,7 +64,6 @@ component-main-intro {
 
   &:first-of-type {
     font-weight: 300;
-    margin: 0 0.15em 0 0;
   }
 }
 
